--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="estilos.css" />
   </head>
   <body>
-    <div id="caja">
-      <p>Lorem, ipsum dolor.</p>
-      <p>Lorem, ipsum dolor.</p>
-      <p>Lorem, ipsum dolor.</p>
-      <p>Lorem, ipsum dolor.</p>
+    <div class="container">
+      <header>
+        <div class="titulo1">Welcome to</div>
+        <div class="titulo2">the wilderness</div>
+        <h2>explore. live. reflect</h2>
+      </header>
+      <div class="btn">explore wyoming</div>
     </div>
   </body>
 </html>
