--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="titulo2">the wilderness</div>
         <h2>explore. live. reflect</h2>
       </header>
-      <div class="btn">explore wyoming</div>
+      <a href="search_page.html" class="btn">explore wyoming</a>
     </div>
   </body>
 </html>
