--- a/search_page.html
+++ b/search_page.html
@@ -2,7 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no"
+    />
+    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <title>Programación para moviles</title>
     <link rel="stylesheet" href="estilos.css" />
   </head>
@@ -19,9 +25,11 @@
         </svg>
         <img class="profile--pic" src="./images/arod.jpg" alt="" />
       </div>
+
       <p class="saludo">Hola Arturo,</p>
       <p class="search-text1">Busca</p>
       <p class="search-text2">una aventura</p>
+
       <div class="search--input">
         <svg
           class="svg--search"
